tests/baselines/reference/topLevelLambda2(strict=true).errors.txt
topLevelLambda2.ts(3,9): error TS7041: The containing arrow function captures the global value of 'this'.


==== topLevelLambda2.ts (1 errors) ====
    function foo(x:any) {}
    
    foo(()=>this.window);
            ~~~~
!!! error TS7041: The containing arrow function captures the global value of 'this'.